# waybar-mpris-menu

./: Cargo.toml
src/: lib.rs  player.rs  player_manager.rs  player_model.rs
