[package]
name = "waybar-mpris"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
soup3 = "0.5.0"
waybar-cffi = "0.1.1"

[dependencies.gdk]
version = "*"
features = ["v3_24"]

[dependencies.serde]
version = "*"
features = ["serde_derive"]

[build-dependencies]
bindgen = "0.72.1"
pkg-config = "0.3.33"
